--- a/app/src/main/res/layout/activity_second_intent_explicit.xml
+++ b/app/src/main/res/layout/activity_second_intent_explicit.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/amarilloclaro"
     android:layout_height="match_parent"
-    tools:context=".ExampleIntentExplicit">
+    android:background="@color/cardview_shadow_start_color"
+    tools:context=".SecondActivityIntentExplicit">
+
 
     <TextView
+        android:id="@+id/tv_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textStyle="italic"
         android:textSize="30sp"
-        android:text="Hello World!"
+        android:text="@string/second_activity"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,14 +25,14 @@
         app:layout_constraintVertical_bias="0.100" />
 
     <Button
-        android:id="@+id/btn1"
+        android:id="@+id/btn_return2"
+        android:text="@string/volver_principal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="30sp"
-        android:backgroundTint="#CA4CAF50"
-        android:text="@string/boton1"
+        android:backgroundTint="#61BDB9"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,24 +40,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.300" />
-
-
-
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:backgroundTint="#CA4CAF50"
-        android:text="@string/boton2"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.600"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
